--- a/src/main/resources/templates/info-system.html
+++ b/src/main/resources/templates/info-system.html
@@ -128,7 +128,6 @@
     <h4 id="auth">Вход</h4>
     <br>
     <p>Для того, чтобы войти в систему, на странице авторизациинужно ввести логин и пароль, затем нажать кнопку «Войти».</p>
-    <img src="/img/auth.png" style="border: 1pt solid black" ></img>
     <br>
     <h4 id="play">Играть в «Тетрис»</h4>
     <br>
@@ -209,13 +208,13 @@
     <h4 id="figs">Работа с фигурами</h4>
     <br>
     <p>Для того, чтобы начать работать с фигурами, на странице главного меню нужно нажать на кнопку «Фигуры». После этого будет открыта страница со списком фигур.</p>
-    <p>Для того, чтобы добавить фигуру, необходимо нажать кнопку «Добавить фигуру». После этого откроется окно создания фигуры.</p>
+    <p>Для того, чтобы добавить фигуру, необходимо нажать кнопку «Добавить фигуру». После этого откроется страница создания фигуры.</p>
     <p>Для того, чтобы удалить фигуру, необходимо нажать кнопку с изображением мусорки у соответсвующей фигуры.</p>
-    <p>Для того, чтобы редактировать фигуру, необходимо нажать кнопку с изображением карандаша у соответсвующей фигуры. После этого откроется окно создания фигуры.</p>
+    <p>Для того, чтобы редактировать фигуру, необходимо нажать кнопку с изображением карандаша у соответсвующей фигуры. После этого откроется страница создания фигуры.</p>
     <img src="/img/figures.png" style="border: 1pt solid black"></img>
     <h4 id="editfig">Создание/редактирование фигуры</h4>
     <br>
-    <p>В окне создания/редактирования фигуры можно задать/изменить форму фигуры. При нажатии на белую клетку в поле 4х4, будет изменен цвет клетки. Цветные клетки
+    <p>На странице создания/редактирования фигуры можно задать/изменить форму фигуры. При нажатии на белую клетку в поле 4х4, будет изменен цвет клетки. Цветные клетки
         составляют фигуру. При нажатии на цветную клетку в поле 4х4, будет изменен цвет клетки на белый.</p>
     <p>При нажатии на кнопку «Соханить», фигура будет сохранена(если она целая и такой фигуры еще нет), после чего произойдет переход на страницу со списком фигур.</p>
     <img src="/img/change_figure.png" style="border: 1pt solid black"></img>
@@ -226,22 +225,22 @@
         уровня сложности.</p>
     <p>При нажатии на кнопку «Сохранить» на странице настройки уровня сложности система сохраняет установленные настройки и осуществляет переход на страницу главного меню.</p>
     <img src="/img/set_lvl.png" style="border: 1pt solid black"></img>
-    <h4 id="edfiglev">Редактирование списка фигур</h4>
+    <h4 id="edfiglev">Редактирование списка фигур на уровне</h4>
     <br>
     <p>Для того, чтобы отредактировать список фигур на уровне, на странице с настройками уровня нужно нажать на кнопку «Изменить список фигур». После этого будет
         открыта страница со списком фигур.</p>
-    <p>Для того, чтобы добавить фигуру на уровень, нужно нажатиь на кнопку «Выбрать» у соответствующей фигуры.</p>
-    <p>Для того, чтобы удалить фигуру с уровеня, нужно нажатиь на кнопку «Удалить» у соответствующей фигуры.</p>
+    <p>Для того, чтобы добавить фигуру на уровень, нужно нажать на кнопку «Выбрать» у соответствующей фигуры.</p>
+    <p>Для того, чтобы удалить фигуру с уровня, нужно нажать на кнопку «Удалить» у соответствующей фигуры.</p>
     <p>При нажатии на кнопку «Сохранить» система сохраняет установленный список фигур и осуществляет переход на страницу настройки уровня сложности.</p>
     <img src="/img/set_lvl_fig.png" style="border: 1pt solid black"></img>
-    <h4 id="edgllev">Редактирование стакана</h4>
+    <h4 id="edgllev">Редактирование стакана на уровне</h4>
     <br>
     <p>Для того, чтобы отредактировать стакан на уровне, на странице с настройками уровня нужно нажать на кнопку «Изменить стакан». После этого будет
         открыта страница со списком стаканов.</p>
-    <p>Для того, чтобы выбрать стакан для уровеня, нужно нажатиь на кнопку «Выбрать» у соответствующего стакана.</p>
+    <p>Для того, чтобы выбрать стакан для уровня, нужно нажать на кнопку «Выбрать» у соответствующего стакана.</p>
     <p>При нажатии на кнопку «Сохранить» система сохраняет установленный стакан и осуществляет переход на страницу настройки уровня сложности.</p>
     <img src="/img/set_lvl_glass.png" style="border: 1pt solid black"></img>
-    <h4 id="edspeed">Редактирование скорости падения фигур</h4>
+    <h4 id="edspeed">Редактирование скорости падения фигур на уровне</h4>
     <br>
     <p>Для того, чтобы отредактировать скорости падения фигур на уровне, на странице с настройками уровня нужно изменить положение ползунка скорости.
         Доступные скорости падения: 0.5, 1.0, 1.5, 2.0.</p></p>
