--- a/src/main/resources/templates/info-system.html
+++ b/src/main/resources/templates/info-system.html
@@ -90,9 +90,9 @@
                         </li>
                         <li><a href="#setlev">Настройка уровней сложности</a>
                             <ul>
-                                <li><a href="#edfiglev">Редактирование списка фигур</a></li>
-                                <li><a href="#edgllev">Редактирование стакана</a></li>
-                                <li><a href="#edspeed">Редактирование скорости падения фигур</a></li>
+                                <li><a href="#edfiglev">Редактирование списка фигур на уровне</a></li>
+                                <li><a href="#edgllev">Редактирование стакана на уровне</a></li>
+                                <li><a href="#edspeed">Редактирование скорости падения фигур на уровне</a></li>
                             </ul>
                         </li>
                     </ul>
